# FileSystem

./: CMakeLists.txt  README.md  main.cpp
controller/: controller.h
model/: filesystem_manager.cpp  filesystem_manager.h  finder.cpp  finder.h  finder.tpp
view/: files_labels.h  finder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scroll_area.h  tree_model.h
